--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test(s) yet\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mysql2": "^3.9.2",
     "sequelize": "^6.37.1"
